k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ridermate-service
  labels:
    app: ridermate
spec:
  type: LoadBalancer
  selector:
    app: ridermate
    tier: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
